Add Firebase, GCP Cloud services integration and enhanced monitoring
- Add FirebaseConfig for Firebase integration
- Add GoogleCloudConfig for GCP services setup
- Add SecretManagerConfig for secure secrets management
- Add MonitoringConfig and PerformanceConfig for observability
- Add CloudLoggingService for structured logging
- Update .gitignore to protect credential files
- Add comprehensive test coverage for new config classes
- Update application.properties with GCP configurations
- Enhance exception handling and logging