@@ -4,28 +4,28 @@ import com.ballotbuddy.dto.ChatRequest;
 import com.ballotbuddy.dto.ChatResponse;
 import com.ballotbuddy.entity.StateElection;
 import com.ballotbuddy.repository.StateElectionRepository;
+import com.google.cloud.vertexai.VertexAI;
+import com.google.cloud.vertexai.generativeai.GenerativeModel;
+import com.google.cloud.vertexai.generativeai.ResponseHandler;
+import com.google.cloud.vertexai.api.GenerateContentResponse;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockedConstruction;
+import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.test.util.ReflectionTestUtils;
-import org.springframework.web.client.RestTemplate;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class GeminiApiServiceImplTest {
-
-    @Mock
-    private RestTemplate restTemplate;
 
     @Mock
     private ElectionService electionService;
@@ -33,43 +33,54 @@ class GeminiApiServiceImplTest {
     @Mock
     private StateElectionRepository stateRepository;
 
+    @Mock
+    private VertexAI vertexAI;
+
     @InjectMocks
     private GeminiApiServiceImpl geminiApiService;
 
     @BeforeEach
     void setUp() {
-        ReflectionTestUtils.setField(geminiApiService, "apiKey", "test-key");
-        ReflectionTestUtils.setField(geminiApiService, "apiUrl", "http://test-url");
-        ReflectionTestUtils.setField(geminiApiService, "restTemplate", restTemplate);
+        ReflectionTestUtils.setField(geminiApiService, "modelName", "gemini-1.5-pro");
     }
 
     @Test
     void askQuestion_Success() {
         ChatRequest request = new ChatRequest("When is election day?");
         when(electionService.getTimelineContext()).thenReturn("Context info");
-        
-        Map<String, Object> mockResponse = Map.of(
-            "candidates", List.of(
-                Map.of("content", Map.of(
-                    "parts", List.of(Map.of("text", "It is on Nov 5."))
-                ))
-            )
-        );
 
-        when(restTemplate.postForObject(anyString(), any(), eq(Map.class))).thenReturn(mockResponse);
+        try (MockedConstruction<GenerativeModel> mockedModel = mockConstruction(GenerativeModel.class,
+                (mock, context) -> {
+                    GenerateContentResponse mockResponse = mock(GenerateContentResponse.class);
+                    when(mock.generateContent(anyString())).thenReturn(mockResponse);
+                });
+             MockedStatic<ResponseHandler> mockedResponseHandler = mockStatic(ResponseHandler.class)) {
+            
+            mockedResponseHandler.when(() -> ResponseHandler.getText(any(GenerateContentResponse.class)))
+                    .thenReturn("It is on Nov 5.");
 
-        ChatResponse response = geminiApiService.askQuestion(request);
+            ChatResponse response = geminiApiService.askQuestion(request);
 
-        assertNotNull(response);
-        assertEquals("It is on Nov 5.", response.getResponse());
+            assertNotNull(response);
+            assertEquals("It is on Nov 5.", response.getResponse());
+            assertEquals(1, mockedModel.constructed().size());
+        }
     }
 
     @Test
-    void askQuestion_ApiFailure_ReturnsFallback() {
+    void askQuestion_SdkFailure_ReturnsFallback() {
         ChatRequest request = new ChatRequest("Maharashtra voters");
-        when(restTemplate.postForObject(anyString(), any(), eq(Map.class))).thenThrow(new RuntimeException("API Down"));
+        // Triggering exception before or during SDK call
+        when(electionService.getTimelineContext()).thenThrow(new RuntimeException("SDK Error"));
+        
         when(stateRepository.findAll()).thenReturn(List.of(
-            StateElection.builder().stateName("Maharashtra").voterCount(96000000L).parties("BJP").mainParticipants("Shinde").electionDate("2024").build()
+            StateElection.builder()
+                .stateName("Maharashtra")
+                .voterCount(96000000L)
+                .parties("BJP, NCP, SHS")
+                .mainParticipants("Multiple Leaders")
+                .electionDate("2024")
+                .build()
         ));
 
         ChatResponse response = geminiApiService.askQuestion(request);
@@ -81,8 +92,8 @@ class GeminiApiServiceImplTest {
 
     @Test
     void askQuestion_VoterKeywordFallback() {
-        ReflectionTestUtils.setField(geminiApiService, "apiKey", "REPLACE_ME");
-        when(stateRepository.findAll()).thenReturn(Collections.emptyList());
+        when(electionService.getTimelineContext()).thenThrow(new RuntimeException("Fail"));
+        when(stateRepository.findAll()).thenReturn(List.of());
 
         ChatResponse response = geminiApiService.askQuestion(new ChatRequest("how to register as a voter"));
         assertTrue(response.getResponse().contains("NVSP portal"));
@@ -90,112 +101,53 @@ class GeminiApiServiceImplTest {
 
     @Test
     void askQuestion_DefaultFallback() {
-        ReflectionTestUtils.setField(geminiApiService, "apiKey", "REPLACE_ME");
-        when(stateRepository.findAll()).thenReturn(Collections.emptyList());
+        when(electionService.getTimelineContext()).thenThrow(new RuntimeException("Fail"));
+        when(stateRepository.findAll()).thenReturn(List.of());
 
-        ChatResponse response = geminiApiService.askQuestion(new ChatRequest("something random"));
+        ChatResponse response = geminiApiService.askQuestion(new ChatRequest("random info"));
         assertTrue(response.getResponse().contains("Maharashtra, UP, Delhi, or Karnataka"));
     }
 
     @Test
-    void askQuestion_NullAndEmptyKeyBranches() {
-        // Test Null Branch
-        ReflectionTestUtils.setField(geminiApiService, "apiKey", null);
-        assertNotNull(geminiApiService.askQuestion(new ChatRequest("test")));
-
-        // Test Empty Branch
-        ReflectionTestUtils.setField(geminiApiService, "apiKey", "");
-        assertNotNull(geminiApiService.askQuestion(new ChatRequest("test")));
-    }
-
-    @Test
-    void askQuestion_ParsingErrorBranch() {
-        ChatRequest request = new ChatRequest("Help");
-        when(electionService.getTimelineContext()).thenReturn("Context info");
-        
-        // Path 1: Empty map
-        when(restTemplate.postForObject(anyString(), any(), eq(Map.class))).thenReturn(Collections.emptyMap());
-        assertEquals("Error parsing response from AI.", geminiApiService.askQuestion(request).getResponse());
-
-        // Path 2: Missing content
-        when(restTemplate.postForObject(anyString(), any(), eq(Map.class))).thenReturn(Map.of("candidates", List.of(Collections.emptyMap())));
-        assertEquals("Error parsing response from AI.", geminiApiService.askQuestion(request).getResponse());
-    }
-
-    @Test
-    void askQuestion_ValidKeyBranch() {
-        // Force all 3 conditions in 'if (apiKey == null || apiKey.equals("REPLACE_ME") || apiKey.isEmpty())' to be FALSE
-        ReflectionTestUtils.setField(geminiApiService, "apiKey", "ACTUAL_KEY");
-        when(electionService.getTimelineContext()).thenReturn("Context");
-        when(restTemplate.postForObject(anyString(), any(), eq(Map.class))).thenThrow(new RuntimeException("API Error"));
-
-        // This will pass the IF and hit the catch block for the API call
-        assertNotNull(geminiApiService.askQuestion(new ChatRequest("test")));
-    }
-
-    @Test
-    void askQuestion_ForLoopCompletesWithoutMatch_VoterKeyword() {
-        // This tests the scenario where:
-        // 1. API key is invalid (REPLACE_ME)
-        // 2. Repository has states
-        // 3. Query doesn't match any state name (loop completes without finding match)
-        // 4. Query contains "voter" keyword -> goes to voter fallback
-
-        ReflectionTestUtils.setField(geminiApiService, "apiKey", "REPLACE_ME");
-
+    void askQuestion_StateNameMatchingFallback() {
+        when(electionService.getTimelineContext()).thenThrow(new RuntimeException("Fail"));
         when(stateRepository.findAll()).thenReturn(List.of(
-            StateElection.builder().stateName("Maharashtra").voterCount(96000000L).build(),
-            StateElection.builder().stateName("Delhi").voterCount(15000000L).build()
+            StateElection.builder()
+                .stateName("Delhi")
+                .voterCount(15000000L)
+                .parties("AAP, BJP, INC")
+                .mainParticipants("Kejriwal")
+                .electionDate("2025")
+                .build()
         ));
 
-        // Query contains "voter" but doesn't match any state name
-        ChatResponse response = geminiApiService.askQuestion(new ChatRequest("how to register as a voter"));
+        ChatResponse response = geminiApiService.askQuestion(new ChatRequest("tell me about Delhi"));
+        assertTrue(response.getResponse().contains("Delhi"));
+        assertTrue(response.getResponse().contains("15,000,000"));
+        assertTrue(response.getResponse().contains("Local Intelligence"));
+    }
 
-        assertNotNull(response);
+    @Test
+    void askQuestion_LoopNoMatch_VoterKeyword() {
+        when(electionService.getTimelineContext()).thenThrow(new RuntimeException("Fail"));
+        // First state doesn't match, loop continues
+        when(stateRepository.findAll()).thenReturn(List.of(
+            StateElection.builder().stateName("Maharashtra").build()
+        ));
+
+        ChatResponse response = geminiApiService.askQuestion(new ChatRequest("register me"));
         assertTrue(response.getResponse().contains("NVSP portal"));
-        assertTrue(response.getResponse().contains("Local Intelligence"));
     }
 
     @Test
-    void askQuestion_RegisterKeyword_FallsBackToVoterInfo() {
-        // This tests the second branch of the OR condition:
-        // Query contains "register" but NOT "voter"
-
-        ReflectionTestUtils.setField(geminiApiService, "apiKey", "REPLACE_ME");
-
+    void askQuestion_MultiStateLoop_MatchesSecond() {
+        when(electionService.getTimelineContext()).thenThrow(new RuntimeException("Fail"));
         when(stateRepository.findAll()).thenReturn(List.of(
-            StateElection.builder().stateName("Maharashtra").voterCount(96000000L).build(),
-            StateElection.builder().stateName("Delhi").voterCount(15000000L).build()
+            StateElection.builder().stateName("Maharashtra").voterCount(100L).build(),
+            StateElection.builder().stateName("Delhi").voterCount(200L).parties("X").mainParticipants("Y").electionDate("Z").build()
         ));
 
-        // Query contains only "register" keyword (not "voter")
-        ChatResponse response = geminiApiService.askQuestion(new ChatRequest("how do I register for elections"));
-
-        assertNotNull(response);
-        assertTrue(response.getResponse().contains("NVSP portal"));
-        assertTrue(response.getResponse().contains("Local Intelligence"));
-    }
-
-    @Test
-    void askQuestion_ForLoopCompletesWithoutMatch_DefaultFallback() {
-        // This tests the scenario where:
-        // 1. API key is invalid (REPLACE_ME)
-        // 2. Repository has states
-        // 3. Query doesn't match any state name (loop completes without finding match)
-        // 4. Query has no special keywords -> goes to default fallback
-
-        ReflectionTestUtils.setField(geminiApiService, "apiKey", "REPLACE_ME");
-
-        when(stateRepository.findAll()).thenReturn(List.of(
-            StateElection.builder().stateName("Maharashtra").voterCount(96000000L).build(),
-            StateElection.builder().stateName("Delhi").voterCount(15000000L).build()
-        ));
-
-        // Query that doesn't match any state or special keyword
-        ChatResponse response = geminiApiService.askQuestion(new ChatRequest("tell me about politics"));
-
-        assertNotNull(response);
-        assertTrue(response.getResponse().contains("Maharashtra, UP, Delhi, or Karnataka"));
-        assertTrue(response.getResponse().contains("Local Intelligence"));
+        ChatResponse response = geminiApiService.askQuestion(new ChatRequest("info on Delhi"));
+        assertTrue(response.getResponse().contains("Delhi"));
     }
 }
